add messaging controller and views

--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -1,1 +1,19 @@
-You have created a chat!
+<div>
+  <h5><%= @friend.first_name.capitalize %></h5>
+  <% if @chat.messages.any? %>
+    <div id="messages">
+      <%= render partial: 'messages/message', collection: @chat.messages.order(id: :asc)%>
+    </div>
+  <%else%>
+    <div id="messages">
+    </div>
+  <%end%>
+</div>
+
+  <%= render partial: 'messages/message_form', locals: {message: @message, chat: @chat}%>
+</div>
+
+<script>
+  createMessageChannel();
+  messageForm();
+</script>
