--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <h5><%= @friend.first_name.capitalize %></h5>
+  <h5>Chat with <%= @other_user.username %></h5>
   <% if @chat.messages.any? %>
     <div id="messages">
       <%= render partial: 'messages/message', collection: @chat.messages.order(id: :asc)%>
