--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,1 +1,1 @@
-<p><%= message.user.first_name %>: <%=message.content%></p>
+<p><strong><%= message.user.username %>:</strong> <%=message.content%></p>
